Fixed responsive issues on mobile devices

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,12 +1,3 @@
-/* Large screens (1405px upwards) */
-@media only screen and (min-width: 1405px) {
-  /* your css goes here */
-}
-/*Retina MacBook pro*/
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-  only screen and (min-device-pixel-ratio: 1.5) {
-}
-
 /* iPhones media query 2436x1125px at 458ppi */
 @media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
   .pull-down-20 {
@@ -41,6 +32,7 @@
   }
   .flex-row-on-mobile {
     display: flex;
+    position: relative !important;
     flex-direction: row;
   }
 }
@@ -48,9 +40,39 @@
 /* Smartphones in portrait mode (0-479px) */
 @media only screen and (max-width: 479px) {
   /* your css goes here */
-}
-
-/* ----------- iPad Pro ----------- */
-/* Portrait and Landscape */
-@media only screen and (min-width: 1024px) and (max-height: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+  .pull-down-20 {
+    margin-top: 15%;
+  }
+  .heading-on-mobile {
+    font-size: 22px !important;
+  }
+  .footer-text-on-mobile {
+    font-size: 15px;
+  }
+  .separator-on-mobile {
+    display: none;
+  }
+  .infographics {
+    display: none;
+  }
+  .form-section-on-mobile {
+    padding: 30px 25px !important;
+    margin: 30px 10px !important;
+  }
+  .form-section-on-mobile .form-group .form-control,
+  .error {
+    height: 45px !important;
+  }
+  .timer-on-mobile {
+    text-align: center !important;
+  }
+  .timer-text-on-mobile {
+    font-size: 26px !important;
+    margin-top: -35px;
+  }
+  .flex-row-on-mobile {
+    display: flex;
+    position: relative !important;
+    flex-direction: row;
+  }
 }
